code refactoring completed