@@ -19,7 +19,8 @@ class MarkdownLexerTest {
         List<TokenType> types = result.tokens().stream().map(Token::type).toList();
 
         assertEquals(1, types.size());
-        assertEquals(TokenType.HEADLINE, types.get(0));
+        assertEquals(TokenType.TEXT, types.get(0));
+        assertEquals(MarkdownLexer.SCOPE_MARKDOWN_HEADLINE, result.tokens().getFirst().styleScope());
     }
 
     @Test
@@ -30,8 +31,9 @@ class MarkdownLexerTest {
         LexResult result = lexer.lexLine(line, LexState.DEFAULT);
         List<TokenType> types = result.tokens().stream().map(Token::type).toList();
 
-        assertTrue(types.contains(TokenType.LIST_ITEM));
         assertTrue(types.contains(TokenType.TEXT));
+        assertTrue(result.tokens().stream()
+            .anyMatch(token -> MarkdownLexer.SCOPE_MARKDOWN_LIST_ITEM.equals(token.styleScope())));
     }
 
     @Test
@@ -40,15 +42,18 @@ class MarkdownLexerTest {
 
         LexResult first = lexer.lexLine("```java", LexState.DEFAULT);
         assertEquals(LexState.of(1), first.exitState());
-        assertEquals(TokenType.CODE_BLOCK, first.tokens().get(0).type());
+        assertEquals(TokenType.TEXT, first.tokens().get(0).type());
+        assertEquals(MarkdownLexer.SCOPE_MARKDOWN_CODE_BLOCK, first.tokens().get(0).styleScope());
 
         LexResult second = lexer.lexLine("int x = 1;", first.exitState());
         assertEquals(LexState.of(1), second.exitState());
-        assertEquals(TokenType.CODE_BLOCK, second.tokens().get(0).type());
+        assertEquals(TokenType.TEXT, second.tokens().get(0).type());
+        assertEquals(MarkdownLexer.SCOPE_MARKDOWN_CODE_BLOCK, second.tokens().get(0).styleScope());
 
         LexResult third = lexer.lexLine("```", second.exitState());
         assertEquals(LexState.DEFAULT, third.exitState());
-        assertEquals(TokenType.CODE_BLOCK, third.tokens().get(0).type());
+        assertEquals(TokenType.TEXT, third.tokens().get(0).type());
+        assertEquals(MarkdownLexer.SCOPE_MARKDOWN_CODE_BLOCK, third.tokens().get(0).styleScope());
     }
 
     @Test
@@ -57,7 +62,8 @@ class MarkdownLexerTest {
         LexResult result = lexer.lexLine("10. item ten", LexState.DEFAULT);
         List<TokenType> types = result.tokens().stream().map(Token::type).toList();
 
-        assertTrue(types.contains(TokenType.LIST_ITEM));
+        assertTrue(result.tokens().stream()
+            .anyMatch(token -> MarkdownLexer.SCOPE_MARKDOWN_LIST_ITEM.equals(token.styleScope())));
         // Marker should be "10. " (4 chars)
         Token marker = result.tokens().get(0);
         assertEquals(0, marker.startColumn());
@@ -70,7 +76,8 @@ class MarkdownLexerTest {
         LexResult result = lexer.lexLine("123. item", LexState.DEFAULT);
         List<TokenType> types = result.tokens().stream().map(Token::type).toList();
 
-        assertTrue(types.contains(TokenType.LIST_ITEM));
+        assertTrue(result.tokens().stream()
+            .anyMatch(token -> MarkdownLexer.SCOPE_MARKDOWN_LIST_ITEM.equals(token.styleScope())));
         Token marker = result.tokens().get(0);
         assertEquals(5, marker.length()); // "123. "
     }
@@ -81,7 +88,8 @@ class MarkdownLexerTest {
         LexResult result = lexer.lexLine("1. first item", LexState.DEFAULT);
         List<TokenType> types = result.tokens().stream().map(Token::type).toList();
 
-        assertTrue(types.contains(TokenType.LIST_ITEM));
+        assertTrue(result.tokens().stream()
+            .anyMatch(token -> MarkdownLexer.SCOPE_MARKDOWN_LIST_ITEM.equals(token.styleScope())));
         Token marker = result.tokens().get(0);
         assertEquals(3, marker.length()); // "1. "
     }
@@ -92,7 +100,8 @@ class MarkdownLexerTest {
         LexResult result = lexer.lexLine("1.item", LexState.DEFAULT);
         List<TokenType> types = result.tokens().stream().map(Token::type).toList();
 
-        assertFalse(types.contains(TokenType.LIST_ITEM));
+        assertFalse(result.tokens().stream()
+            .anyMatch(token -> MarkdownLexer.SCOPE_MARKDOWN_LIST_ITEM.equals(token.styleScope())));
     }
 
     @Test
